force-app/main/default/objects/Int_File_Control__c/Int_File_Control__c.object-meta.xml
<CustomObject>
    <description>Int File Control</description>
    <label>Int File Control</label>
    <nameField>
        <displayFormat>FCI-{0000000000}</displayFormat>
        <label>File Control Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Files Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>