force-app/main/default/objects/Int_File_Control__c/fields/End_DateTime_Extraction__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime_Extraction__c</fullName>
    <description>End Date Time Extraction</description>
    <label>End DateTime Extraction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>