force-app/main/default/objects/Int_File_Control__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>File Name</description>
    <label>File Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>