force-app/main/default/objects/Int_File_Control__c/fields/Hash_Total_2__c.field-meta.xml
<CustomField>
    <fullName>Hash_Total_2__c</fullName>
    <description>Hash Total 2</description>
    <label>Hash Total 2</label>
    <length>36</length>
    <type>Text</type>
</CustomField>