force-app/main/default/objects/Int_File_Control__c/fields/Number_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Records__c</fullName>
    <description>Number of Records</description>
    <label>Number of Records</label>
    <length>20</length>
    <type>Text</type>
</CustomField>