force-app/main/default/objects/Int_File_Control__c/fields/Start_DateTime_Extraction__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime_Extraction__c</fullName>
    <description>Start DateTime Extraction</description>
    <label>Start DateTime Extraction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>