force-app/main/default/objects/Int_File_Control__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>Number_of_Records__c</columns>
    <columns>File_Name__c</columns>
    <columns>Start_DateTime_Extraction__c</columns>
    <columns>End_DateTime_Extraction__c</columns>
    <columns>Hash_Total_1__c</columns>
    <columns>Hash_Total_2__c</columns>
    <columns>Hash_Total_3__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>